# RayTracer

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
include/: canvas.h  cartesia.h  chapter4.h  chapter5.h  colors.h  intersections.h  matrices.h  rays.h  shapes.h  spheres.h  transformations.h
include/raytracer/: canvas.h  cartesia.h  chapter4.h  intersections.h  rays.h
include/raytracer/matrices/: helper.h  matrices.h  transformations.h
include/raytracer/shapes/: shapes.h  spheres.h
src/: canvas.ppm  main.cpp  matrices.cpp  raytracer.cpp  raytracer.hpp  transformations.cpp
src/matrices/: helper.cpp  matrices.cpp  transformations.cpp
src/raytracer/chapters/: chapter5.hpp  chapter6.hpp  chapter7.hpp
src/raytracer/common/: config.hpp  constants.hpp  ids.hpp
src/raytracer/core/: camera.hpp  canvas.hpp  colors.hpp  intersections.hpp  rays.hpp  world.cpp  world.hpp
src/raytracer/core/lights/: light.hpp
src/raytracer/core/materials/: material.hpp  material.models.hpp
src/raytracer/core/matrices/: helper.cpp  helper.hpp  matrix.cpp  matrix.hpp  transformations.cpp  transformations.hpp
src/raytracer/core/patterns/: pattern.factory.hpp  pattern.hpp  pattern.models.hpp
src/raytracer/core/shapes/: plane.hpp  shape.cpp  shape.hpp  sphere.hpp  transformable.hpp
src/shapes/: shapes.cpp
tests/: camera.test.cpp  canvas.test.cpp  canvas_test.cpp  cartesia_test.cpp  colors.test.cpp  colors_test.cpp  intersections.test.cpp  intersections_test.cpp  light.test.cpp  material.test.cpp  matrices_test.cpp  matrix.test.cpp  pattern.test.cpp  plane.test.cpp  rays.test.cpp  rays_test.cpp  shape.test.cpp  sphere.test.cpp  spheres.test.cpp  spheres_test.cpp  transformable.test.cpp  transformations.test.cpp  transformations_test.cpp  world.test.cpp
tests/include/: fixtures.h  fixtures.hpp  helpers.h  helpers.hpp  mocks.hpp  raytracer.tests.hpp
